--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -95,6 +95,12 @@
 		<version>1.16.8</version>
 	</dependency>
 
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.1.7</version>
+	</dependency>
+
 
 	<dependency>
 		<groupId>org.springframework</groupId>
