--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -1,1 +1,12 @@
-events.prop = 100001,\u70B9\u51FB\u6CE8\u518C;100002,\u586B\u5199\u624B\u673A\u53F7
+# Amap settings
+amap.api.token=089dee1ce79db044d31ad59d5264ab41
+amap.api.convert.url=http://restapi.amap.com/v3/assistant/coordinate/convert?
+amap.api.regeo.url=http://restapi.amap.com/v3/geocode/regeo?
+
+redis.hostname=localhost
+redis.port=6379
+
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/segment?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
+jdbc.username=root
+jdbc.password=
