add rest controller

--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -120,6 +120,46 @@
 	</dependency>
 
 	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-webmvc</artifactId>
+	    <version>4.3.0.RELEASE</version>
+	</dependency>
+
+	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>javax.servlet-api</artifactId>
+	    <version>3.1.0</version>
+	    <scope>provided</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>1.10.19</version>
+	</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.1</version>
+</dependency>
+
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.8.1</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.8.1</version>
+</dependency>
+
+
+
+	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-test</artifactId>
 		<version>4.3.0.RELEASE</version>
@@ -131,4 +171,69 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.eclipse.jetty</groupId> -->
+<!-- 			    <artifactId>jetty-maven-plugin</artifactId> -->
+<!-- 			    <version>9.3.11.v20160721</version> -->
+<!-- 			    <configuration> -->
+<!-- 			        <webApp> -->
+<!-- 			            <contextPath>/${project.artifactId}</contextPath> -->
+<!-- 			        </webApp> -->
+<!-- 			        <stopKey>STOP</stopKey> -->
+<!-- 			        <stopPort>9999</stopPort> -->
+<!-- 			        <scanIntervalSeconds>5</scanIntervalSeconds> -->
+<!-- 			    </configuration> -->
+<!-- 			</plugin> -->
+			
+<!-- 		<plugin> -->
+<!--             <groupId>org.eclipse.jetty</groupId> -->
+<!--             <artifactId>jetty-maven-plugin</artifactId> -->
+<!--             <version>9.3.11.v20160721</version> -->
+<!--             <configuration> -->
+<!--                 <scanIntervalSeconds>10</scanIntervalSeconds> -->
+<!--                 <httpConnector> -->
+<!--                     <port>7777</port> -->
+<!--                 </httpConnector> -->
+<!--                   <webAppConfig> -->
+<!--                     <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames> -->
+<!--       			  </webAppConfig> -->
+<!--             </configuration> -->
+<!--         </plugin> -->
+			
+		</plugins>
+	</build>
+  
 </project>
