--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tendcloud.antifraud</groupId>
+  <groupId>cn.td.geotags</groupId>
   <artifactId>poi-tools</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -41,11 +41,11 @@
 		<artifactId>spring-context-support</artifactId>
 		<version>4.3.0.RELEASE</version>
 	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-autoconfigure</artifactId>
-		<version>1.3.5.RELEASE</version>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.springframework.boot</groupId> -->
+<!-- 		<artifactId>spring-boot-autoconfigure</artifactId> -->
+<!-- 		<version>1.3.5.RELEASE</version> -->
+<!-- 	</dependency> -->
 
 	<dependency>
 		<groupId>org.springframework.data</groupId>
@@ -53,11 +53,11 @@
 		<version>1.12.2.RELEASE</version>
 	</dependency>
 
-	<dependency>
-		<groupId>org.springframework.data</groupId>
-		<artifactId>spring-data-neo4j</artifactId>
-		<version>4.1.2.RELEASE</version>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.springframework.data</groupId> -->
+<!-- 		<artifactId>spring-data-neo4j</artifactId> -->
+<!-- 		<version>4.1.2.RELEASE</version> -->
+<!-- 	</dependency> -->
 
 	<dependency>
 		<groupId>org.springframework</groupId>
@@ -157,7 +157,29 @@
     <version>2.8.1</version>
 </dependency>
 
+	<dependency>
+	    <groupId>com.typesafe.akka</groupId>
+	    <artifactId>akka-actor_2.11</artifactId>
+	    <version>2.4.8</version>
+	</dependency>
 
+<dependency>
+    <groupId>org.springframework.batch</groupId>
+    <artifactId>spring-batch-core</artifactId>
+    <version>3.0.7.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.batch</groupId>
+    <artifactId>spring-batch-infrastructure</artifactId>
+    <version>3.0.7.RELEASE</version>
+</dependency>
+
+	<dependency>
+		<groupId>hsqldb</groupId>
+		<artifactId>hsqldb</artifactId>
+		<version>1.8.0.7</version>
+	</dependency>
 
 	<dependency>
 		<groupId>org.springframework</groupId>
