--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -7,7 +7,7 @@ amap.api.around.path=/place/around
 redis.hostname=localhost
 redis.port=6379
 
-#jdbc.driver=com.mysql.cj.jdbc.Driver
-#jdbc.url=jdbc:mysql://127.0.0.1:3306/segment?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
-#jdbc.username=root
-#jdbc.password=
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
+jdbc.username=root
+jdbc.password=
