--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -1,261 +1,272 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cn.td.geotags</groupId>
-  <artifactId>poi-tools</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>cn.td.geotags</groupId>
+    <artifactId>poi-tools</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
 
-  <name>poi-tools</name>
-  <url>http://maven.apache.org</url>
+    <name>poi-tools</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
+    <dependencies>
 
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-core</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-beans</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-aop</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context-support</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-<!-- 	<dependency> -->
-<!-- 		<groupId>org.springframework.boot</groupId> -->
-<!-- 		<artifactId>spring-boot-autoconfigure</artifactId> -->
-<!-- 		<version>1.3.5.RELEASE</version> -->
-<!-- 	</dependency> -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <!-- 	<dependency> -->
+        <!-- 		<groupId>org.springframework.boot</groupId> -->
+        <!-- 		<artifactId>spring-boot-autoconfigure</artifactId> -->
+        <!-- 		<version>1.3.5.RELEASE</version> -->
+        <!-- 	</dependency> -->
 
-	<dependency>
-		<groupId>org.springframework.data</groupId>
-		<artifactId>spring-data-commons</artifactId>
-		<version>1.12.2.RELEASE</version>
-	</dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>1.12.2.RELEASE</version>
+        </dependency>
 
-<!-- 	<dependency> -->
-<!-- 		<groupId>org.springframework.data</groupId> -->
-<!-- 		<artifactId>spring-data-neo4j</artifactId> -->
-<!-- 		<version>4.1.2.RELEASE</version> -->
-<!-- 	</dependency> -->
+        <!-- 	<dependency> -->
+        <!-- 		<groupId>org.springframework.data</groupId> -->
+        <!-- 		<artifactId>spring-data-neo4j</artifactId> -->
+        <!-- 		<version>4.1.2.RELEASE</version> -->
+        <!-- 	</dependency> -->
 
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-web</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-jdbc</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
 
-	<dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<version>1.4.192</version>
-	</dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.192</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-dbcp2</artifactId>
-		<version>2.1.1</version>
-	</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+        </dependency>
 
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>6.0.3</version>
-	</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.3</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.projectlombok</groupId>
-		<artifactId>lombok</artifactId>
-		<version>1.16.8</version>
-	</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
 
-	<dependency>
-		<groupId>ch.qos.logback</groupId>
-		<artifactId>logback-classic</artifactId>
-		<version>1.1.7</version>
-	</dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-lang3</artifactId>
-		<version>3.4</version>
-	</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.springframework.data</groupId>
-		<artifactId>spring-data-redis</artifactId>
-		<version>1.7.2.RELEASE</version>
-	</dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.7.2.RELEASE</version>
+        </dependency>
 
-	<dependency>
-		<groupId>redis.clients</groupId>
-		<artifactId>jedis</artifactId>
-		<version>2.8.1</version>
-	</dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 
-	<dependency>
-	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-webmvc</artifactId>
-	    <version>4.3.0.RELEASE</version>
-	</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
 
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>javax.servlet-api</artifactId>
-	    <version>3.1.0</version>
-	    <scope>provided</scope>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.mockito</groupId>
-	    <artifactId>mockito-core</artifactId>
-	    <version>1.10.19</version>
-	</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
 
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>2.8.1</version>
-</dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 
 
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-core</artifactId>
-    <version>2.8.1</version>
-</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-annotations</artifactId>
-    <version>2.8.1</version>
-</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 
-	<dependency>
-	    <groupId>com.typesafe.akka</groupId>
-	    <artifactId>akka-actor_2.11</artifactId>
-	    <version>2.4.8</version>
-	</dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.11</artifactId>
+            <version>2.4.8</version>
+        </dependency>
 
-<dependency>
-    <groupId>org.springframework.batch</groupId>
-    <artifactId>spring-batch-core</artifactId>
-    <version>3.0.7.RELEASE</version>
-</dependency>
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+            <version>3.0.7.RELEASE</version>
+        </dependency>
 
-<dependency>
-    <groupId>org.springframework.batch</groupId>
-    <artifactId>spring-batch-infrastructure</artifactId>
-    <version>3.0.7.RELEASE</version>
-</dependency>
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-infrastructure</artifactId>
+            <version>3.0.7.RELEASE</version>
+        </dependency>
 
-	<dependency>
-		<groupId>hsqldb</groupId>
-		<artifactId>hsqldb</artifactId>
-		<version>1.8.0.7</version>
-	</dependency>
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+        </dependency>
 
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-test</artifactId>
-		<version>4.3.0.RELEASE</version>
-	</dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-			
-	<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.eclipse.jetty</groupId> -->
-<!-- 			    <artifactId>jetty-maven-plugin</artifactId> -->
-<!-- 			    <version>9.3.11.v20160721</version> -->
-<!-- 			    <configuration> -->
-<!-- 			        <webApp> -->
-<!-- 			            <contextPath>/${project.artifactId}</contextPath> -->
-<!-- 			        </webApp> -->
-<!-- 			        <stopKey>STOP</stopKey> -->
-<!-- 			        <stopPort>9999</stopPort> -->
-<!-- 			        <scanIntervalSeconds>5</scanIntervalSeconds> -->
-<!-- 			    </configuration> -->
-<!-- 			</plugin> -->
-			
-<!-- 		<plugin> -->
-<!--             <groupId>org.eclipse.jetty</groupId> -->
-<!--             <artifactId>jetty-maven-plugin</artifactId> -->
-<!--             <version>9.3.11.v20160721</version> -->
-<!--             <configuration> -->
-<!--                 <scanIntervalSeconds>10</scanIntervalSeconds> -->
-<!--                 <httpConnector> -->
-<!--                     <port>7777</port> -->
-<!--                 </httpConnector> -->
-<!--                   <webAppConfig> -->
-<!--                     <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames> -->
-<!--       			  </webAppConfig> -->
-<!--             </configuration> -->
-<!--         </plugin> -->
-			
-		</plugins>
-	</build>
-  
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8080</port>
+                    <path>/</path>
+                    <uriEncoding>UTF-8</uriEncoding>
+                    <useBodyEncodingForURI>true</useBodyEncodingForURI>
+                </configuration>
+            </plugin>
+            <!-- 			<plugin> -->
+            <!-- 				<groupId>org.eclipse.jetty</groupId> -->
+            <!-- 			    <artifactId>jetty-maven-plugin</artifactId> -->
+            <!-- 			    <version>9.3.11.v20160721</version> -->
+            <!-- 			    <configuration> -->
+            <!-- 			        <webApp> -->
+            <!-- 			            <contextPath>/${project.artifactId}</contextPath> -->
+            <!-- 			        </webApp> -->
+            <!-- 			        <stopKey>STOP</stopKey> -->
+            <!-- 			        <stopPort>9999</stopPort> -->
+            <!-- 			        <scanIntervalSeconds>5</scanIntervalSeconds> -->
+            <!-- 			    </configuration> -->
+            <!-- 			</plugin> -->
+
+            <!-- 		<plugin> -->
+            <!--             <groupId>org.eclipse.jetty</groupId> -->
+            <!--             <artifactId>jetty-maven-plugin</artifactId> -->
+            <!--             <version>9.3.11.v20160721</version> -->
+            <!--             <configuration> -->
+            <!--                 <scanIntervalSeconds>10</scanIntervalSeconds> -->
+            <!--                 <httpConnector> -->
+            <!--                     <port>7777</port> -->
+            <!--                 </httpConnector> -->
+            <!--                   <webAppConfig> -->
+            <!--                     <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames> -->
+            <!--       			  </webAppConfig> -->
+            <!--             </configuration> -->
+            <!--         </plugin> -->
+
+        </plugins>
+    </build>
+
 </project>
