add job manager code for async scheduling

--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -8,6 +8,12 @@ redis.hostname=localhost
 redis.port=6379
 
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://54.222.253.178:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
+jdbc.username=pig
+jdbc.password=pig
+
+# Async task executor settings
+executor.core.pool.size = 5
+executor.max.pool.size = 10
+executor.queue.capacity = 25
+executor.keep.alive.seconds = 300
