--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -5,7 +5,6 @@
     <groupId>cn.td.geotags</groupId>
     <artifactId>poi-tools</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <name>poi-tools</name>
     <url>http://maven.apache.org</url>
@@ -175,11 +174,36 @@
             <version>3.0.7.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>hsqldb</groupId> -->
+<!--             <artifactId>hsqldb</artifactId> -->
+<!--             <version>1.8.0.7</version> -->
+<!--         </dependency> -->
+
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-webapp</artifactId>
+    <version>9.3.11.v20160721</version>
+</dependency>
+
+<!-- <dependency> -->
+<!--     <groupId>org.eclipse.jetty</groupId> -->
+<!--     <artifactId>jetty-server</artifactId> -->
+<!--     <version>9.3.11.v20160721</version> -->
+<!-- </dependency> -->
+
+<!-- <dependency> -->
+<!--     <groupId>org.eclipse.jetty</groupId> -->
+<!--     <artifactId>jetty-servlet</artifactId> -->
+<!--     <version>9.3.11.v20160721</version> -->
+<!-- </dependency> -->
+
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-annotations</artifactId>
+    <version>9.3.11.v20160721</version>
+</dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
