add rest api for query jobs

--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -17,3 +17,8 @@ executor.core.pool.size = 5
 executor.max.pool.size = 10
 executor.queue.capacity = 25
 executor.keep.alive.seconds = 300
+
+# file upload & download
+upload.tmp.dir = d:/datahub/temp
+file.in.dir = d:/datahub/input
+file.out.dir = d:/datahub/output
