--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -76,16 +76,6 @@
             <version>1.16.8</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <version>1.7.2.RELEASE</version>
@@ -136,22 +126,43 @@
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.3.2</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
 		<dependency>
 		    <groupId>org.apache.directory.studio</groupId>
 		    <artifactId>org.apache.commons.codec</artifactId>
 		    <version>1.8</version>
 		</dependency>
-	     <dependency>
-	         <groupId>org.springframework</groupId>
-	         <artifactId>spring-test</artifactId>
-	         <version>4.3.0.RELEASE</version>
-	     </dependency>
-	     <dependency>
-	         <groupId>junit</groupId>
-	         <artifactId>junit</artifactId>
-	         <version>3.8.1</version>
-	         <scope>test</scope>
-	     </dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.0.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
