--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -8,7 +8,7 @@ redis.hostname=localhost
 redis.port=6379
 
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://54.222.253.178:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
+jdbc.url=jdbc:mysql://localhost:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
 jdbc.username=pig
 jdbc.password=pig
 
