--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -195,17 +195,20 @@
                     </execution>
                 </executions>
             </plugin>
-<!--             <plugin> -->
-<!--                 <groupId>org.apache.tomcat.maven</groupId> -->
-<!--                 <artifactId>tomcat7-maven-plugin</artifactId> -->
-<!--                 <version>2.2</version> -->
-<!--                 <configuration> -->
-<!--                     <port>8080</port> -->
-<!--                     <path>/</path> -->
-<!--                     <uriEncoding>UTF-8</uriEncoding> -->
-<!--                     <useBodyEncodingForURI>true</useBodyEncodingForURI> -->
-<!--                 </configuration> -->
-<!--             </plugin> -->
+			<plugin>
+	            <groupId>org.eclipse.jetty</groupId>
+	            <artifactId>jetty-maven-plugin</artifactId>
+	            <version>9.3.11.v20160721</version>
+	            <configuration>
+	                <scanIntervalSeconds>10</scanIntervalSeconds>
+	                <httpConnector>
+	                    <port>7777</port>
+	                </httpConnector>
+	                  <webAppConfig>
+	                    <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
+	      			  </webAppConfig>
+	            </configuration>
+	        </plugin>
         </plugins>
     </build>
 </project>
