--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-amap.api.token=089dee1ce79db044d31ad59d5264ab41
+amap.api.token=089dee1ce79db044d31ad59d5264ab41,41ff3434e38a1d7dac5055eb2def746c,b1140da2f3157d04364a51572880e54c,b0befdaea2f9d689104c884776ac1523
 amap.api.base.url=http://restapi.amap.com/v3
 amap.api.convert.path=/assistant/coordinate/convert
 amap.api.regeo.path=/geocode/regeo
