--- a/poi-tools/pom.xml
+++ b/poi-tools/pom.xml
@@ -158,6 +158,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.talkingdata</groupId>
+			<artifactId>talkingdata-monitor-client</artifactId>
+			<version>0.0.7</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
