加入新需求 POI Rank

--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -3,6 +3,7 @@ amap.api.base.url=http://restapi.amap.com/v3
 amap.api.convert.path=/assistant/coordinate/convert
 amap.api.regeo.path=/geocode/regeo
 amap.api.around.path=/place/around
+amap.api.district.path=/config/district
 
 redis.hostname=localhost
 redis.port=6379
