每个 job 的调用都加入监控, 设定了资源使用的阈值

--- a/poi-tools/src/main/resources/app.properties
+++ b/poi-tools/src/main/resources/app.properties
@@ -7,6 +7,8 @@ amap.api.district.path=/config/district
 
 redis.hostname=localhost
 redis.port=6379
+# default expire time in seconds
+redis.default.expire=86400
 
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/batch?useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
@@ -23,3 +25,8 @@ executor.keep.alive.seconds = 300
 upload.tmp.dir = d:/datahub/temp
 file.in.dir = d:/datahub/input
 file.out.dir = d:/datahub/output
+
+connect.timeout.interval = 2000
+read.timeout.interval = 2000
+
+gp.count.threshold = 200000
